# filter_log_in_csv

./: .gitignore  README.MD  filter.py  pyproject.toml
data/: data.txt  list.txt
tests/: test_filter_log_in_csv.py
