[tool.poetry]
name = "filter_log_in_csv"
version = "0.1.0"
description = ""
authors = ["Stanislav Somov <i@avt-x.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
